--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,6 @@
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/7837472/632644/css/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="{{asset "css/style.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/animate.min.css"}}" />
 
@@ -37,7 +36,7 @@
                 <a class="c-blog-footer__logo" style="background-image:url({{@blog.logo}}" href="{{@blog.url}}"></a>
                 <div>{{@blog.title}}</div>
             </section>
-            <section class="c-blog-footer__poweredby">Proudly published with <a href="mailto:hello@bemind.me">Bemind</a> - Blog based on <a href="https://github.com/bemindinteractive/bemario">Bemario Theme</a> - &copy; {{date format="YYYY"}}</section>
+            <section class="c-blog-footer__poweredby">Powered by Banca Sella - All right reserved <a href="https://www.hype.it">HYPE</a> - &copy; {{date format="YYYY"}}</section>
         </footer>
     </main>
     {{> "innernav"}}
