--- a/default.hbs
+++ b/default.hbs
@@ -36,7 +36,7 @@
                 <a class="c-blog-footer__logo" style="background-image:url({{@blog.logo}}" href="{{@blog.url}}"></a>
                 <div>{{@blog.title}}</div>
             </section>
-            <section class="c-blog-footer__poweredby">Powered by Banca Sella - All right reserved <a href="https://www.hype.it">HYPE</a> - &copy; {{date format="YYYY"}}</section>
+            <section class="c-blog-footer__poweredby">Powered by Banca Sella - All right reserved <a href="https://www.hype.it">HYPE</a> &copy; {{date format="YYYY"}}</section>
         </footer>
     </main>
     {{> "innernav"}}
